; ModuleID = '/home/carl/AnghaBench/mongoose/examples/STM32F4_CC3100/extr_main.c_SimpleLinkWlanEventHandler.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/STM32F4_CC3100/extr_main.c_SimpleLinkWlanEventHandler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@.str = private unnamed_addr constant [20 x i8] c"Connected to WiFi\0D\0A\00", align 1
@.str.1 = private unnamed_addr constant [20 x i8] c"Disconnected WiFi\0D\0A\00", align 1
@.str.2 = private unnamed_addr constant [20 x i8] c"Got Wlan event %d\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SimpleLinkWlanEventHandler(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %10 [
    i32 129, label %6
    i32 128, label %8
  ]

6:                                                ; preds = %1
  %7 = call i32 (i8*, ...) @CLI_Write(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %15

8:                                                ; preds = %1
  %9 = call i32 (i8*, ...) @CLI_Write(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.1, i64 0, i64 0))
  br label %15

10:                                               ; preds = %1
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 (i8*, ...) @CLI_Write(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.2, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %10, %8, %6
  ret void
}

declare dso_local i32 @CLI_Write(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
